[Password Manager] Require re-auth in save bubble if the previous re-auth was unsuccessful

There is a bug: the password could be revealed in a bubble after re-auth (even if the previous the re-auth was unsuccessful)

Bug: 802977
Change-Id: Ia1b541838dff0401fffe691a5dc1b3b035658be9